--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
     <p>
-        https://pixabay.com/de/vectors/smiley-grün-einfach-unzufrieden-146094/<\br>
-        https://pixabay.com/de/vectors/smiley-grün-einfach-glücklich-146093/<\br>
-        https://www.istockphoto.com/illustrations/different-hobbies<\br>
-        https://stock.adobe.com/de/images/losung/60702681<\br>
-        https://youtu.be/iFpCLjAE8MM?si=GAQbT86SAkRMc2H8<\br>
-        https://youtu.be/b4TNChVH7zc?si=GL08KJonZ4sWafk0<\br>
-        https://www.tagesschau.de/wahl/archiv/2024-09-01-LT-DE-TH/<\br>
-        https://www.tagesschau.de/wahl/archiv/2024-09-01-LT-DE-SN/index.shtml<\br><\br><\br>
+        https://pixabay.com/de/vectors/smiley-grün-einfach-unzufrieden-146094/   <br>
+        https://pixabay.com/de/vectors/smiley-grün-einfach-glücklich-146093/  <br>
+        https://www.istockphoto.com/illustrations/different-hobbies <br>
+        https://stock.adobe.com/de/images/losung/60702681 <br>
+        https://youtu.be/iFpCLjAE8MM?si=GAQbT86SAkRMc2H8 <br>
+        https://youtu.be/b4TNChVH7zc?si=GL08KJonZ4sWafk0 <br>
+        https://www.tagesschau.de/wahl/archiv/2024-09-01-LT-DE-TH/ <br>
+        https://www.tagesschau.de/wahl/archiv/2024-09-01-LT-DE-SN/index.shtml <br><br><br>
 
 
-        Die von PMG Presse-Monitor GmbH & Co.  KG herausgegebenen Hauptausgaben der Tageszeitungen Thüringer Allgemeine Erfurt <\br>
+        Die von PMG Presse-Monitor GmbH & Co.  KG herausgegebenen Hauptausgaben der Tageszeitungen Thüringer Allgemeine Erfurt <br>
         (vom 14.09.2024 von dem Autor Fabian Klaus, auf Seite 1) und die Leipziger Volkszeitung Stadt Leipzig (vom 13.09.2024 von dem Autor Kai Kollenberg, auf Seite 8)
     </p>
 </body>
